<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MusicInfoActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/black" />

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:maxWidth="128dp"
        android:maxHeight="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/baseline_album_64" />

    <TextView
        android:id="@+id/infoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/infoAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albumTitle"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/infoArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_artist"
        android:layout_gravity="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/infoGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_gravity="center"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/infoUploader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadedBy"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seekBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playPauseButton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:onClick="playPauseSelectedSong"
            android:padding="16dp"
            app:icon="@drawable/baseline_play_arrow_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopButton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:onClick="stopSelectedSong"
            android:padding="16dp"
            app:icon="@drawable/baseline_stop_64"
            app:layout_constraintEnd_toEndOf="@+id/seekBar"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/totalSongLength"
            app:layout_constraintStart_toEndOf="@+id/currentSongPosition"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentSongPosition"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/startOfSong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalSongLength"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/startOfSong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>