<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/albumArtImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:minWidth="64dp"
            android:maxWidth="64dp"
            android:maxHeight="64dp"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/stat_sys_warning" />

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/albumArtImage"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:maxLength="80"
            android:text="@string/song_title" />

        <TextView
            android:id="@+id/songArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:maxLength="80"
            android:layout_toEndOf="@id/albumArtImage"
            android:text="@string/song_artist" />

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/song_duration" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>